--- a/src/app/product-alerts/product-alerts.component.html
+++ b/src/app/product-alerts/product-alerts.component.html
@@ -1,11 +1,3 @@
-<p>
-	product-alerts works!
-</p>
-<div *ngFor="let product of products">
-
-	<h3>
-		<a [title]="product.name + ' details'">
-			{{ product.name }}
-		</a>
-	</h3>
-</div>
+<p *ngIf="product.price > 700">
+    <button>Notify Me</button>
+    </p>>
